# software_design_patterns

./: pyproject.toml
Adapter/: README.md  with_caching.py  without_caching.py
Bridge/: README.md  example.py
Builder/: README.md  combine_via_interfave.py  example.py  inheritance_builder.py
Chain-of-responsibility/: brocker_chain.py  method_chain.py
Command/: README.md  command.py  composite_command.py
Composite/: README.md  g_shapes.py  neural_networks.py
Decorator/: README.md  classic_decorators.py  dinamic_decorators.py  func_decorators.py
Facade/: README.md  example.py
Factories/: README.md  abstract_fabric.py  fabric.py  factory_method.py
Flyweight/: README.md  formatting_text.py  users.py
Interpretator/: README.md  example.py
Iterator/: README.md  binary_tree.py  list_backed_props.py
Mediator/: README.md  chat.py  with_events.py
Memento/: README.md  example.py
Observer/: README.md  event_example.py  property_observers.py
Prototype/: README.md  prototype.py  prototype_factory.py
Proxy/: README.md  protection.py  virtual.py
SOLID/DIP/: destignation.md  right.py  wrong.py
SOLID/ISP/: designation.md  right.py  wrong.py
SOLID/LSP/: designation.md  right.py  wrong.py
SOLID/OCP/: right.py  (+2 more)
Singleton/: README.md  monostate.py  monostate_2.py  testing.py  via_allocator.py  via_decorator.py  via_metaclass.py
State/: README.md  state_machine_classic.py  state_machine_switch.py
Strategy/: README.md  example.py
Template-Method/: README.md  example.py
Visitor/: README.md  classic.py  impoved_classic.py  intrusive.py  reflective.py
(+4 files in other folders)
